# smefit_tutorial

./: pyproject.toml
benchmarks/: profile_ns.py
commondata/: atlas_data_tutorial.yaml
runcards/: atlas_public.yaml  tutorial.yaml
src/smefit_tutorial/: chi2.py  coefficients.py  runner.py
src/smefit_tutorial/analyze/: chi2_utils.py  fisher.py  pca.py  report.py
src/smefit_tutorial/cli/: __init__.py
src/smefit_tutorial/optimize/: __init__.py  mc.py  ns.py
tests/: test_chi2_utils.py  test_fisher.py  test_loader.py  test_optimize.py  test_pca.py  test_runner.py
