[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "smefit_tutorial"
version = "0.0.4"
description = "Standard Model Effective Field Theory Fitter"
authors = [
    {name = "Tommaso Giani", email = "tgiani@nikhef.nl"},
    {name = "Giacomo Magni", email = "gmagni@nikhef.nl"},
]
readme = "README.md"
keywords = ["packaging", "dependency", "infer", "pyproject.toml"]
repository = "https://github.com/tgiani/smefit_tutorial"
classifiers=[
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"

dependencies = [
  "rich >= 11.2.0",
  "matplotlib >= 3.5.1",
  "pyyaml >= 5.3.0",
  "numpy >= 1.21.5",
  "pandas >= 1.4.1",
  "scipy >= 1.8.0",
  "click >= 8.1.3",
  "cma >= 3.2.2",
  "seaborn >= 0.11.2",
]


[project.scripts]
smefit = "smefit_tutorial.cli:base_command"
